--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,15 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>de.bstreit.java.springaop.observablebean</groupId>
-	<artifactId>springaop-observable-bean</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>0.5.0.M6</version>
-	</parent>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>0.5.0.M6</version>
+        </parent>
 
+        <artifactId>springaop-observable-bean-aspect</artifactId>
+	<groupId>de.bstreit.java.springaop.observablebean</groupId>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
 
@@ -51,43 +49,35 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 		</dependency>
-		
 
+		<!-- Tools -->
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>16.0</version>
+		</dependency>
+
+		<!-- Tests -->
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jdal</groupId>
+			<artifactId>jdal-core</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
-	<!-- Allow access to Spring milestones and snapshots -->
-	<!-- (you don't need this if you are using anything after 0.5.0.RELEASE) -->
-	<repositories>
-		<repository>
-			<id>spring-snapshots</id>
-			<url>http://repo.spring.io/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>spring-milestones</id>
-			<url>http://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-snapshots</id>
-			<url>http://repo.spring.io/snapshot</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>spring-milestones</id>
-			<url>http://repo.spring.io/milestone</url>
-		</pluginRepository>
-	</pluginRepositories>
-
-
-	<modules>
-		<module>springaop-observable-bean-aspect</module>
-		<module>springaop-observable-bean-samples</module>
-	</modules>
 </project>
