--- a/pom.xml
+++ b/pom.xml
@@ -80,4 +80,34 @@
 	</dependencies>
 
 
+        <!-- Allow access to Spring milestones and snapshots -->
+        <!-- (you don't need this if you are using anything after 0.5.0.RELEASE) -->
+        <repositories>
+                <repository>
+                        <id>spring-snapshots</id>
+                        <url>http://repo.spring.io/snapshot</url>
+                        <snapshots>
+                                <enabled>true</enabled>
+                        </snapshots>
+                </repository>
+                <repository>
+                        <id>spring-milestones</id>
+                        <url>http://repo.spring.io/milestone</url>
+                        <snapshots>
+                                <enabled>true</enabled>
+                        </snapshots>
+                </repository>
+        </repositories>
+        <pluginRepositories>
+                <pluginRepository>
+                        <id>spring-snapshots</id>
+                        <url>http://repo.spring.io/snapshot</url>
+                </pluginRepository>
+                <pluginRepository>
+                        <id>spring-milestones</id>
+                        <url>http://repo.spring.io/milestone</url>
+                </pluginRepository>
+        </pluginRepositories>
+
+
 </project>
