--- a/pom.xml
+++ b/pom.xml
@@ -3,111 +3,93 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>0.5.0.M6</version>
-        </parent>
-
-        <artifactId>springaop-observable-bean-aspect</artifactId>
+	<artifactId>springaop-observable-bean-aspect</artifactId>
 	<groupId>de.bstreit.java.springaop.observablebean</groupId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-M1</version>
+
+	<properties>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.7</maven.compiler.source>
+	</properties>
 
 	<dependencies>
 
-		<!-- Spring Core -->
+		<dependency>
+			<groupId>org.jdal</groupId>
+			<artifactId>jdal-aop</artifactId>
+			<version>2.0-SNAPSHOT</version>
+		</dependency>
+
+
+		<!-- Tests -->
 
 		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.0.0.RELEASE</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-logging</artifactId>
-		</dependency>
-
-		<!-- AOP -->
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aop</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-		</dependency>
-
-		<!-- Tools -->
-
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>16.0</version>
-		</dependency>
-
-		<!-- Tests -->
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
+			<version>4.0.0.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.jdal</groupId>
-			<artifactId>jdal-core</artifactId>
-			<version>2.0-SNAPSHOT</version>
-		</dependency>
 	</dependencies>
 
 
-        <!-- Allow access to Spring milestones and snapshots -->
-        <!-- (you don't need this if you are using anything after 0.5.0.RELEASE) -->
-        <repositories>
-                <repository>
-                        <id>spring-snapshots</id>
-                        <url>http://repo.spring.io/snapshot</url>
-                        <snapshots>
-                                <enabled>true</enabled>
-                        </snapshots>
-                </repository>
-                <repository>
-                        <id>spring-milestones</id>
-                        <url>http://repo.spring.io/milestone</url>
-                        <snapshots>
-                                <enabled>true</enabled>
-                        </snapshots>
-                </repository>
-        </repositories>
-        <pluginRepositories>
-                <pluginRepository>
-                        <id>spring-snapshots</id>
-                        <url>http://repo.spring.io/snapshot</url>
-                </pluginRepository>
-                <pluginRepository>
-                        <id>spring-milestones</id>
-                        <url>http://repo.spring.io/milestone</url>
-                </pluginRepository>
-        </pluginRepositories>
+	<repositories>
 
+		<repository>
+			<id>jdal</id>
+			<name>JDAL Repository</name>
+			<url>http://www.jdal.org/repo</url>
+		</repository>
+
+		<!-- Allow access to Spring milestones and snapshots -->
+		<repository>
+			<id>spring-snapshots</id>
+			<url>http://repo.spring.io/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>spring-milestones</id>
+			<url>http://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+
+	</repositories>
+	<pluginRepositories>
+
+		<pluginRepository>
+			<id>spring-snapshots</id>
+			<url>http://repo.spring.io/snapshot</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>spring-milestones</id>
+			<url>http://repo.spring.io/milestone</url>
+		</pluginRepository>
+
+	</pluginRepositories>
 
 </project>
